--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amara Village</title>
+    <meta
+      name="description"
+      content="Amara Village - Hunian modern dan strategis dekat Stasiun Parung Panjang. Miliki rumah impian mulai 2 jutaan per bulan."
+    />
+    <meta
+      name="keywords"
+      content="Amara Village, rumah dekat stasiun, rumah Parung Panjang, cluster Alamanda, hunian modern, rumah baru, perumahan BSD"
+    />
+    <meta name="author" content="Amara Village Developer" />
+    <meta
+      property="og:title"
+      content="Amara Village - Hunian Strategis dan Modern"
+    />
+    <meta
+      property="og:description"
+      content="Rumah modern dengan fasilitas lengkap dan lokasi strategis dekat BSD dan stasiun. Mulai 2 jutaan per bulan."
+    />
+    <meta property="og:image" content="/header.jpg" />
+    <meta property="og:url" content="https://www.amaravillage.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Amara Village - Hunian Strategis dan Modern"
+    />
+    <meta
+      name="twitter:description"
+      content="Rumah modern dengan fasilitas lengkap dan lokasi strategis dekat BSD dan stasiun. Mulai 2 jutaan per bulan."
+    />
+    <meta name="twitter:image" content="/header.jpg" />
+    <link rel="icon" type="image" href="/logo.jpeg" />
+    <title>Amara Village - Hunian Strategis dan Modern</title>
   </head>
   <body>
     <div id="root"></div>
