add tag google ads

--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
     <meta name="twitter:image" content="/header.jpg" />
     <link rel="icon" type="image" href="/logo.jpeg" />
     <title>Amara Village - Hunian Strategis dan Modern</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16824837465"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16824837465");
+    </script>
   </head>
   <body>
     <div id="root"></div>
