--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 
       gtag("config", "AW-16824837465");
     </script>
+    <!-- Event snippet for Kunjungan halaman conversion page -->
+    <script>
+      gtag("event", "conversion", {
+        send_to: "AW-16824837465/ehThCIrp1IsaENnK2tY-",
+        value: 1.0,
+        currency: "IDR",
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
